kubernetes/poc/networkpolicies/app-to-database-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-application-to-db
  namespace: poc
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: aspnet-app
              deployment: blue
    - from:
        - podSelector:
            matchLabels:
              app: aspnet-app-green
              deployment: green
    - from:
        - podSelector:
            matchLabels:
              app: prometheus-server
