kubernetes/poc/networkpolicies/deny-all-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: poc
spec:
  podSelector: {}
  policyTypes:
  - Ingress
