kubernetes/poc/networkpolicies/ingress-to-app-netpol-green.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-app-green
  namespace: poc
spec:
  podSelector:
    matchLabels:
      app: aspnet-app-green
      deployment: green
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
