kubernetes/poc/networkpolicies/ingress-to-app-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-app
  namespace: poc
spec:
  podSelector:
    matchLabels:
      app: aspnet-app
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
